# ChronoForge

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.trae/documents/: 实现ChronoForge自运行模式.md
chronoforge/: __init__.py  cli.py  scheduler.py  utils.py
chronoforge/data_source/: __init__.py  base.py  bitcoin_fgi.py  crypto_spot.py  crypto_umfuture.py  fred.py  global_market.py
chronoforge/server/: dependencies.py  main.py
chronoforge/server/api/: __init__.py  plugins.py  status.py  tasks.py
chronoforge/server/models/: plugin.py  task.py
chronoforge/storage/: __init__.py  base.py  duckdb.py  localfile.py  redisdb.py
examples/: add_tasks_to_server.py  embeded.py  function_test.py  get_task_data.py  get_task_data_info.py  monitor.py  plugin_functions_example.py  restful_api.py  task_monitor.py
tests/: test_data_source.py  test_plugin_verification.py  test_scheduler.py  test_scheduler_core.py  test_storage.py  test_utils.py
