[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono_forge"
version = "0.1.0"
description = "异步、插件式的时间序列数据处理框架，基于DuckDB"
authors = [
  { name = "Daboooooo", email = "horsen666@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "pyarrow>=22.0.0",
  "duckdb>=1.4.1",
  "pandas>=2.3.3",
  "asyncio>=3.4.3",
  "psutil>=7.1.3",
  "redis>=7.1.0",
  "ccxt>=4.5.18",
  "yfinance==0.2.66",
  "pycoingecko==3.2.0",
  "fredapi==0.5.2",
  "binance-futures-connector==4.1.0",
  "fastapi>=0.120.0",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.5",
  "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.18.0",
  "black>=23.0.0",
  "isort>=5.10.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["chronoforge"]

[tool.coverage.report]
show_missing = true
fail_under = 80